--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 	<div class="usercard" id="usercard">
-		<p></p>
+		<p>User</p>
 	</div>
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
