--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
 	<title>Shop</title>
 </head>
 <body>
-	<div class="container">
-		<div class="inner">
-			<div class="item">
-				<img src="./img/1.png" alt="" class="img">
-				<button class="btn" id="btn1">Add</button>
-			</div>
-			<div class="item">
-				<img src="./img/2.png" alt="" class="img">
-				<button class="btn" id="btn2">Add</button>
-			</div>
-			<div class="item">
-				<img src="./img/3.png" alt="" class="img">
-				<button class="btn" id="btn3">Add</button>
-			</div>
-			<div class="item">
-				<img src="./img/4.png" alt="" class="img">
-				<button class="btn" id="btn4">Add</button>
-			</div>
-			<div class="item">
-				<img src="./img/5.png" alt="" class="img">
-				<button class="btn" id="btn5">Add</button>
-			</div>
-			<div class="item">
-				<img src="./img/6.png" alt="" class="img">
-				<button class="btn" id="btn6">Add</button>
+	<div class="center">
+		<div class="container">
+			<div class="inner">
+				<div class="item">
+					<img src="./img/1.png" alt="" class="img">
+					<p>Price: 1000</p>
+					<button class="btn" id="btn1">Add</button>
+				</div>
+				<div class="item">
+					<img src="./img/2.png" alt="" class="img">
+					<p>Price: 2000</p>
+					<button class="btn" id="btn2">Add</button>
+				</div>
+				<div class="item">
+					<img src="./img/3.png" alt="" class="img">
+					<p>Price: 3000</p>
+					<button class="btn" id="btn3">Add</button>
+				</div>
+				<div class="item">
+					<img src="./img/4.png" alt="" class="img">
+					<p>Price: 4000</p>
+					<button class="btn" id="btn4">Add</button>
+				</div>
+				<div class="item">
+					<img src="./img/5.png" alt="" class="img">
+					<p>Price: 5000</p>
+					<button class="btn" id="btn5">Add</button>
+				</div>
+				<div class="item">
+					<img src="./img/6.png" alt="" class="img">
+					<p>Price: 6000</p>
+					<button class="btn" id="btn6">Add</button>
+				</div>
 			</div>
 		</div>
 	</div>
