--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 	<div class="center">
 		<div class="container">
 			<div class="inner">
-				<div class="item">
+				<div class="item" id="item1">
 					<img src="./img/1.png" alt="" class="img">
 					<p>Price: 1000</p>
 					<button class="btn" id="btn1">Add</button>
 				</div>
-				<div class="item">
+				<div class="item" id="item2">
 					<img src="./img/2.png" alt="" class="img">
 					<p>Price: 2000</p>
 					<button class="btn" id="btn2">Add</button>
 				</div>
-				<div class="item">
+				<div class="item" id="item3">
 					<img src="./img/3.png" alt="" class="img">
 					<p>Price: 3000</p>
 					<button class="btn" id="btn3">Add</button>
 				</div>
-				<div class="item">
+				<div class="item" id="item4">
 					<img src="./img/4.png" alt="" class="img">
 					<p>Price: 4000</p>
 					<button class="btn" id="btn4">Add</button>
 				</div>
-				<div class="item">
+				<div class="item" id="item5">
 					<img src="./img/5.png" alt="" class="img">
 					<p>Price: 5000</p>
 					<button class="btn" id="btn5">Add</button>
 				</div>
-				<div class="item">
+				<div class="item" id="item6">
 					<img src="./img/6.png" alt="" class="img">
 					<p>Price: 6000</p>
 					<button class="btn" id="btn6">Add</button>
